@@ -613,16 +613,16 @@ cl_xa::disass(t_addr addr)
     break;
     case DIRECT_REG :
       parm_str= chars("", "%s,%s",
-              get_dir_name(((code & 0x7) << 8) |
-                           rom->get(addr+immed_offset)),
-              reg_strs[((code >> 4) & 0xf)] );
+		      get_dir_name(((code & 0x7) << 8) |
+				   rom->get(addr+immed_offset)).c_str(),
+		      reg_strs[((code >> 4) & 0xf)] );
       ++immed_offset;
     break;
     case REG_DIRECT :
       parm_str= chars("", "%s,%s",
-              reg_strs[((code >> 4) & 0xf)],
-              get_dir_name(((code & 0x7) << 8) |
-                           rom->get(addr+immed_offset)));
+		      reg_strs[((code >> 4) & 0xf)],
+		      get_dir_name(((code & 0x7) << 8) |
+				   rom->get(addr+immed_offset)).c_str());
       ++immed_offset;
     break;
     case REG_DATA8 :
@@ -723,18 +723,18 @@ cl_xa::disass(t_addr addr)
     break;
     case DIRECT_DATA8 :
       parm_str= chars("", "%s,#0x%02x",
-              get_dir_name(((code & 0x0070) << 4) |
-                           rom->get(addr+immed_offset)),
-              rom->get(addr+immed_offset+1));
+		      get_dir_name(((code & 0x0070) << 4) |
+				   rom->get(addr+immed_offset)).c_str(),
+		      rom->get(addr+immed_offset+1));
       immed_offset += 3;
     break;
     case DIRECT_DATA16 :
       operand= rom->get(addr+immed_offset+2) +
-               (rom->get(addr+immed_offset+1)<<8);
+	(rom->get(addr+immed_offset+1)<<8);
       parm_str= chars("", "%s,#0x%04x",
-              get_dir_name(((code & 0x0070) << 4) |
-                           rom->get(addr+immed_offset)),
-              operand);
+		      get_dir_name(((code & 0x0070) << 4) |
+				   rom->get(addr+immed_offset)).c_str(),
+		      operand);
       addr_name(operand, rom, &parm_str);
       immed_offset += 3;
     break;
@@ -745,11 +745,11 @@ cl_xa::disass(t_addr addr)
     break;
     case CY_BIT :
       parm_str= chars("", "C,%s",
-             get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)));
+		      get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)).c_str());
     break;
     case BIT_CY :
       parm_str= chars("", "%s,C",
-              get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)));
+		      get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)).c_str());
     break;
     case REG_DATA4 :
       parm_str= chars("", "REG_DATA4");
@@ -771,32 +771,32 @@ cl_xa::disass(t_addr addr)
     break;
     case DIRECT_DATA4 :
       parm_str= chars("", "%s,#0x%x",
-	      get_dir_name(((code & 0x70)<<4) |
-			   rom->get(addr+2)),
+		      get_dir_name(((code & 0x70)<<4) |
+				   rom->get(addr+2)).c_str(),
 	      code&0x0f);
     break;
     case DIRECT :
       parm_str= chars("", "%s",
-              get_dir_name(((code & 0x007) << 4) +
-                           rom->get(addr+2)));
+		      get_dir_name(((code & 0x007) << 4) +
+				   rom->get(addr+2)).c_str());
     break;
     case REG :
       parm_str= chars("", "%s",
-              reg_strs[((code >> 4) & 0xf)] );
-    break;
+		      reg_strs[((code >> 4) & 0xf)] );
+      break;
     case IREG :
       parm_str= chars("", "[%s]",
-              reg_strs[((code >> 4) & 0xf)] );
+		      reg_strs[((code >> 4) & 0xf)] );
     break;
     case BIT_ALONE :
       parm_str= chars("", "%s",
-	      get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)));
+		      get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)).c_str());
     break;
     case BIT_REL8 :
       operand= (u16_t)(((i8_t)rom->get(addr+3)*2+addr+len)&0xfffe);
       parm_str= chars("", "%s,0x%04lx",
-              get_bit_name((code&0x0003)<<8) + rom->get(addr+2),
-              operand);
+		      get_bit_name(((code&0x0003)<<8) + rom->get(addr+2)).c_str(),
+		      operand);
       addr_name(operand, rom, &parm_str);
     break;
     case DATA4:
@@ -820,8 +820,8 @@ cl_xa::disass(t_addr addr)
     case DIRECT_REL8 :
       operand= (u16_t)(((i8_t)rom->get(addr+2)*2+addr+len)&0xfffe);
       parm_str= chars("", "%s,0x%04lx",
-              get_dir_name(((code&0x07)<<8) + rom->get(addr+2)),
-              operand);
+		      get_dir_name(((code&0x07)<<8) + rom->get(addr+2)).c_str(),
+		      operand);
       addr_name(operand, rom, &parm_str);
     break;
     case REG_USP:
@@ -834,11 +834,11 @@ cl_xa::disass(t_addr addr)
       operand= (u16_t)(((signed char)rom->get(addr+1)*2+addr+len)&0xfffe);
       parm_str= chars("", "0x%04lx", operand);
       addr_name(operand, rom, &parm_str);
-    break;
-    case REL16 :
-      operand= (u16_t)(((i8_t)((rom->get(addr+1)<<8) + rom->get(addr+2))*2+addr+len)&0xfffe);
-      parm_str= chars("", "0x%04lx", operand);
-      addr_name(operand, rom, &parm_str);
+      break;
+  case REL16 :
+    operand= (u16_t)(((i8_t)((rom->get(addr+1)<<8) + rom->get(addr+2))*2+addr+len)&0xfffe);
+    parm_str= chars("", "0x%04lx", operand);
+    addr_name(operand, rom, &parm_str);
     break;
 
     case RLIST : {
@@ -891,83 +891,83 @@ cl_xa::disass(t_addr addr)
 
     case REG_DIRECT_REL8 :
       parm_str= chars("", "%s,%s,0x%02x",
-              reg_strs[((code >> 4) & 0xf)],
-              get_dir_name(((code & 0x7) << 8) +
-                           rom->get(addr+immed_offset)),
-              ((signed char) rom->get(addr+immed_offset+1) * 2) & 0xfffe );
+		      reg_strs[((code >> 4) & 0xf)],
+		      get_dir_name(((code & 0x7) << 8) +
+				   rom->get(addr+immed_offset)).c_str(),
+		      ((signed char) rom->get(addr+immed_offset+1) * 2) & 0xfffe );
     break;
     case REG_DATA8_REL8 :
       parm_str= chars("", "%s,#0x%02x,0x%02x",
-              reg_strs[((code >> 4) & 0xf)],
-              rom->get(addr+immed_offset+1),
-              ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
+		      reg_strs[((code >> 4) & 0xf)],
+		      rom->get(addr+immed_offset+1),
+		      ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
     break;
     case REG_DATA16_REL8 :
       parm_str= chars("", "%s,#0x%04x,0x%02x",
-              w_reg_strs[(code >> 4) & 0xf],
-              rom->get(addr+immed_offset+2) +
-                 (rom->get(addr+immed_offset+1)<<8),
-              ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
-    break;
-    case IREG_DATA8_REL8 :
-      parm_str= chars("", "[%s],#0x%02x,0x%02x",
+		      w_reg_strs[(code >> 4) & 0xf],
+		      rom->get(addr+immed_offset+2) +
+		      (rom->get(addr+immed_offset+1)<<8),
+		      ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
+      break;
+  case IREG_DATA8_REL8 :
+    parm_str= chars("", "[%s],#0x%02x,0x%02x",
               reg_strs[((code >> 4) & 0x7)],
-              rom->get(addr+immed_offset+1),
-              ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
+		    rom->get(addr+immed_offset+1),
+		    ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
     break;
-    case IREG_DATA16_REL8 :
-      parm_str= chars("", "[%s],#0x%04x,0x%02x",
-              w_reg_strs[(code >> 4) & 0x7],
-              rom->get(addr+immed_offset+2) +
-	        (rom->get(addr+immed_offset+1)<<8),
-              ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
+  case IREG_DATA16_REL8 :
+    parm_str= chars("", "[%s],#0x%04x,0x%02x",
+		    w_reg_strs[(code >> 4) & 0x7],
+		    rom->get(addr+immed_offset+2) +
+		    (rom->get(addr+immed_offset+1)<<8),
+		    ((signed char)rom->get(addr+immed_offset) * 2) & 0xfffe );
     break;
-
-    case A_APLUSDPTR :
-      parm_str= chars("", "A, [A+DPTR]");
+    
+  case A_APLUSDPTR :
+    parm_str= chars("", "A, [A+DPTR]");
     break;
-
-    case A_APLUSPC :
-      parm_str= chars("", "A, [A+PC]");
+    
+  case A_APLUSPC :
+    parm_str= chars("", "A, [A+PC]");
     break;
-
-    case REG_REGOFF8 :
-      operand= rom->get(addr+immed_offset);
-      parm_str= chars("", "%s,%s+0x%02x",
-              w_reg_strs[(code >> 4) & 0x7],
-              w_reg_strs[code & 0x7],
-              operand);
-      addr_name(operand, rom, &parm_str);
-      break;
-
-    case REG_REGOFF16 :
-      operand= rom->get(addr+immed_offset+1) +
-               (rom->get(addr+immed_offset+0)<<8);
-      parm_str= chars("", "%s,%s+0x%02x",
-              w_reg_strs[(code >> 4) & 0x7],
-              w_reg_strs[code & 0x7],
-              operand);
-      addr_name(operand, rom, &parm_str);
-      break;
-
-    case A_PLUSDPTR :
-      parm_str= chars("", "[A+DPTR]");
-      break;
-
-    case IIREG :
-      parm_str= chars("", "[[%s]]",
-              w_reg_strs[(code & 0x7)]);
-      break;
-
-    default:
-      parm_str= chars("???");
+    
+  case REG_REGOFF8 :
+    operand= rom->get(addr+immed_offset);
+    parm_str= chars("", "%s,%s+0x%02x",
+		    w_reg_strs[(code >> 4) & 0x7],
+		    w_reg_strs[code & 0x7],
+		    operand);
+    addr_name(operand, rom, &parm_str);
+    break;
+    
+  case REG_REGOFF16 :
+    operand= rom->get(addr+immed_offset+1) +
+      (rom->get(addr+immed_offset+0)<<8);
+    parm_str= chars("", "%s,%s+0x%02x",
+		    w_reg_strs[(code >> 4) & 0x7],
+		    w_reg_strs[code & 0x7],
+		    operand);
+    addr_name(operand, rom, &parm_str);
+    break;
+    
+  case A_PLUSDPTR :
+    parm_str= chars("", "[A+DPTR]");
+    break;
+    
+  case IIREG :
+    parm_str= chars("", "[[%s]]",
+		    w_reg_strs[(code & 0x7)]);
+    break;
+    
+  default:
+    parm_str= chars("???");
     break;
   }
-
+  
   work= op_mnemonic_str[ mnemonic ];
   while (work.len() < 6) work.append(' ');
   work+= parm_str;
-
+  
   return strdup(work.c_str());
 }
 
