@@ -1,5 +1,12 @@
 2021-05-07 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  src/z80/gen.c,
+	  support/regression/tests/bug-3229.c:
+	  Fix bug #3229.
+
+2021-05-07 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/gen.c:
 	  Fix some bugs triggered by return values in other than the conventional registers.
 
